# kyogre

./: .dockerignore  .env  .gitignore  .sql-formatter.json  Dockerfile  LICENSE.md  README.md  docker-compose.yml  injectfmt.toml  plans  sqlx-data.json  test.yaml
consumer/: Cargo.toml
consumer/src/: consumer.rs  distance_to_shore.rs  error.rs  lib.rs  main.rs  models.rs  settings.rs  startup.rs  token.rs
consumer/tests/it/: consumer.rs  helper.rs
scripts/rust/fuel-tuning/: .env  Cargo.toml
scripts/rust/fuel-validation/: .gitignore  Cargo.toml  EROS oljeforbruk 2022 - 2024.xlsx  Herøyfjord oljeforbruk 2022-24.xlsx  fuel-nergard.xlsx
scripts/rust/gen-test-data/: Cargo.toml
src/: Cargo.toml  README.md  sqlx-data.json
src/.sqlx/: query-003596650448e93b7294d13eb042e8d77dd1626e80a78b354ee54cfca1f35a63.json  query-004d7aad7428767840c0e1250c78b4aece9d73e6667c98057ee8e4a2852754e0.json  query-00613cf07e904b7b1cf7abfed4e8a827dc048438378973e6f58b2f8c8712b2c9.json  query-00c5fe74ab161f3572bd7cacaacae1305cbf422995cc410a4bcac00c7bcc0137.json  query-00deb14b4aa994fcb6e3d599cf87c62ae6f51da1e99b2edff6c3e3c2906430fd.json  query-00fe476745b6d5b18ddcb81b221385ac38a83264a55fe09f68691eedfb64f856.json  query-01d129a423d0841939f580d291faf902986df413a51596b07b02884db6b3163d.json  query-01d24ce5633fafb10e67751f1c6b48b0babe1e1953c3fd1438d3e910b05439ee.json  query-01e9c34d7554246c273c748173b47941d4cb8afa758eb60b20f30c7d65abc8d4.json  query-0201c5703c009b5575ae8c9187bf62386517d01a6f59b422ccdb00fd08391c53.json  query-0274068b7ced469f35c860a1148ff3358742b1854e3e0f4c82fa0367a11667ea.json  query-02a87d93636576f8b3b221d63daafcfe8ce2a5739bdf6dafd795bde85b616a91.json  query-02c80ee940ccc468ef76b2f1dac1b8e57cbafb5cad03f76def87862e72febabb.json  query-02f644c5dfd0bd1282f37ae6e89d78f9751d7b46e3558407a994383fe34ee812.json  query-032c9454abb06bea4913c4a936c81aaa4aa5161573096255bfd0258afc048f28.json  query-035f38075fcb3c3af94ce476de451dab8df97a819f47ee4178d23062c90b5250.json  query-038b605d8eb74850530fedc5a4a0057b952eb3beff3c342ffb6bfcbfcc3e8612.json  query-039288f8046c67728778dbd18b0120075e722097d5e550f282719a5b6d4421c5.json  query-039412a673179740c4c8f2aef9648aa613275602c4ebb851d014baeffb4e7cce.json  query-03f4755e0940634df173ffeabc9c3c853109f50d413b4439e681c39f371079e0.json  query-041103e42bd9fd3717b8e3bf91fd06fad82eeb0be04f8facb6e9d21a22c72f6f.json  query-0448705379e581d98b5a777275d1648a711c5efb91adc116cdedff91cd4efa45.json  query-044dbf09e27d88ce789447d4e0dce5bf9a93e6aa1299e1aa3956f9eaea6cebef.json  query-04880b7c3ef237de9fe7f04927026bdf45492d6673c1f5db5da32796657a4c50.json  query-048a38a42c743e9d021229ef1993f1b64e1e95210a1e5414b5421d90d0377b8b.json  query-052b29cd62b3b791464e47240279c95dab3ea618e78ec352bd4870816dfb94eb.json  query-05744d983cd4494e071cd9437c95d3c97c72e5b6346bbac747f26e034819afc7.json  query-057640b7649c1ca1d62b4402a240d71ed145eb16465e128a4eeddf95c99c5645.json  query-05fa2f291ca59c1b5785a1778b26822c7a4a08cb5fd6b61479775b46841f5210.json  query-06373fbeadcf8c2530425f951e66f17e3e6c4e5822ca4ceb591ac1c916cf829e.json  query-063adc9482f22cac37020d52be48e3080e60cb7b26628cb02f20d804f92a8490.json  query-0647aec2d99874a7b79f9dd5798762f2bdf810c7869b43eece314fed782659a6.json  query-0668953a865d0bc3316b4cffc2f9707cb2fc109faac80de8fe835a162b526835.json  query-067c3ab4e24cbd573fc7cfc571f248cbc7a119686090df80933f93931c9b94ee.json  query-0737bd38ed8c20efde9b20ccd7afc5f51779595424c8db6360b66c03749aef16.json  query-07cc8100121d5d85e26296fd45cac4d06a39987eeda9a786871ec413d809dcd7.json  query-07ce762e7aa1506995a01cb77598b1095c380a10c973a1ebc0ef2495d04cfb14.json  query-083bc756bc74ceb74f6b992e1f7d04c33238e9dccc10d3c9dfef4c8cec399598.json  query-087e361f783522cf39e09824ba50ecf0af954005737aafd9c04b49e0de8a955d.json  query-08d7a9686af9708f0f550a7439012db7ee480bb1333f9372b7e2472c69402ea5.json  (+1195 more)
src/ais-consumer/: Cargo.toml  README.md
src/ais-consumer/config/: development.yml  local.yml
src/ais-consumer/src/: barentswatch.rs  consumer.rs  error.rs  lib.rs  main.rs  models.rs  settings.rs  startup.rs
src/ais-data-migrator/: Cargo.toml
src/ais-data-migrator/config/: local.yml
src/ais-data-migrator/src/: barentswatch.rs  error.rs  lib.rs  main.rs  settings.rs  source.rs  startup.rs
src/consumer/: Cargo.toml
src/consumer/config/: development.yml
src/consumer/src/: barentswatch.rs  consumer.rs  models.rs  settings.rs  startup.rs
src/database-migrator/: Cargo.toml
src/database-migrator/config/: development.yml  local.yml
src/database-migrator/src/: main.rs  settings.rs
src/duckdb-rs/: Cargo.toml  build.rs
src/duckdb-rs/config/: development.yml  local.yml  staging.yml
src/duckdb-rs/proto/: matrix_cache.proto
src/duckdb-rs/src/: adapter.rs  api.rs  error.rs  filter.rs  lib.rs  main.rs  refresher.rs  settings.rs  startup.rs
src/engine/: Cargo.toml
src/engine/config/: development.yml  local.yml
src/engine/src/: error.rs  lib.rs  main.rs  settings.rs  startup.rs  trip_layer.rs
src/fiskeridir-rs/: Cargo.toml
src/fiskeridir-rs/src/: api_downloader.rs  deserialize_utils.rs  error.rs  file_downloader.rs  lib.rs  string_new_types.rs  utils.rs
src/fiskeridir-rs/test_data/: aqua_culture_register.csv  register_vessels.json
src/fuel-processor/: Cargo.toml
src/fuel-processor/config/: development.yml  local.yml
src/fuel-processor/src/: error.rs  fuel_estimation.rs  lib.rs  live_fuel.rs  main.rs  settings.rs  startup.rs  unrealistic_speed.rs
src/gen-test-data/: Cargo.toml
src/gen-test-data/src/: main.rs
src/haul-distributor/: Cargo.toml
src/haul-distributor/src/: ais_vms.rs  lib.rs
src/http-client/: Cargo.toml
src/http-client/src/: client.rs  error.rs  lib.rs  (+2 more)
src/kyogre-core/: Cargo.toml
src/leviathan-postgres/: Cargo.toml
src/meilisearch/: Cargo.toml
src/ml-trainer/: Cargo.toml
src/postgres/: Cargo.toml  create_template_db.sql  sqlx-data.json
src/processors/: Cargo.toml
src/scraper/: Cargo.toml
src/trip-assembler/: Cargo.toml
src/trip-benchmark/: Cargo.toml
src/trip-distancer/: Cargo.toml
src/vessel-benchmark/: Cargo.toml
src/web-api/: Cargo.toml
(+1119 files in other folders)
