[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca-core = { registry = "orcalabs-orcastrator", version = "0.19.0", features = ["telemetry"] }

async-trait = "0.1.59"
serde = "1.0.149"
config = "0.13.3"
tokio = { version = "1.23.0", features = ["macros", "sync", "time"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
futures = "0.3.25"
tracing = "0.1.37"
chrono = { version = "0.4.23", features = ["serde"] }
error-stack = "0.2.4"
serde_json = "1.0.89"
