[workspace]
resolver = "2"
members = [
    "postgres",
    "ais-consumer",
    "kyogre-core",
    "database-migrator",
    "web-api",
    "engine",
    "scraper",
    "trip-benchmark",
    "duckdb-rs",
    "meilisearch",
    "fiskeridir-rs",
    "http-client",
]

[workspace.dependencies]
fiskeridir-rs = { path = "./fiskeridir-rs/", features = ["utoipa", "sqlx"] }

machine = { version = "0.15.0", registry = "orcalabs-orcastrator" }
orca-core = { version = "0.33.0", registry = "orcalabs-orcastrator" }

sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "chrono",
    "json",
    "uuid",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
serde_repr = "0.1"
serde_json = "1.0"
humantime-serde = "1.1"
reqwest = { version = "0.12.9", default-features = false }
stack-error = { version = "0.3.0", registry = "orcalabs-orcastrator" }
snafu = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
tokio = "1.41"
tokio-stream = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
async-trait = "0.1"
utoipa = "5.2"
futures = "0.3"
futures-util = "0.3"
enum_index = "0.2"
enum_index_derive = "0.2"
uuid = { version = "1.11", features = ["serde"] }
wkt = { version = "0.11", features = ["serde"] }
geo = "0.28"
rand = "0.8"
num-traits = "0.2"
num-derive = "0.4"
pyo3 = { version = "0.22.6", features = ["chrono", "auto-initialize"] }
csv = "1.3"
regex = "1.11"
jurisdiction = "0.1"
http = "1.1"
geozero = { version = "0.14", features = ["with-postgis-sqlx"] }
geoutils = "0.5"

# dev-dependencies
wiremock = "0.6"
tracing-subscriber = "0.3"
