[workspace]
resolver = "2"
members = [
    "postgres",
    "ais-consumer",
    "kyogre-core",
    "database-migrator",
    "web-api",
    "engine",
    "scraper",
    "trip-benchmark",
    "duckdb-rs",
    "meilisearch",
    "fiskeridir-rs",
    "http-client",
    "processors",
]

[workspace.dependencies]
fiskeridir-rs = { path = "./fiskeridir-rs/", features = ["oasgen", "sqlx"] }

machine = { version = "0.17.1", registry = "orcalabs-orcastrator" }
orca-core = { version = "0.35.1", registry = "orcalabs-orcastrator" }

sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "chrono",
    "json",
    "uuid",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
serde_repr = "0.1"
serde_json = "1.0"
humantime-serde = "1.1"
reqwest = { version = "0.12.9", default-features = false }
stack-error = { version = "0.4.0", registry = "orcalabs-orcastrator" }
snafu = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
tokio = "1.42"
tokio-stream = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
async-trait = "0.1"
oasgen = { git = "https://github.com/markhilb/oasgen", branch = "all", features = [
    "chrono",
    "uuid",
] }
futures = "0.3"
futures-util = "0.3"
enum_index = "0.2"
enum_index_derive = "0.2"
uuid = { version = "1.11", features = ["serde"] }
wkt = { version = "0.12", features = ["serde"] }
geo = "0.29"
rand = "0.8"
num-traits = "0.2"
num-derive = "0.4"
pyo3 = { version = "0.23.3", features = ["chrono", "auto-initialize"] }
csv = "1.3"
regex = "1.11"
jurisdiction = "0.1"
http = "1.2"
geozero = { version = "0.14", features = ["with-postgis-sqlx"] }
geoutils = "0.5"
async-channel = "2.3.1"

# dev-dependencies
wiremock = "0.6"
tracing-subscriber = "0.3"
