[workspace]
resolver = "2"
members = [
    "postgres",
    "ais-consumer",
    "kyogre-core",
    "database-migrator",
    "web-api",
    "engine",
    "scraper",
    "trip-benchmark",
    "duckdb-rs",
    "fiskeridir-rs",
    "http-client",
    "processors",
    "gen-test-data",
]

[workspace.dependencies]
fiskeridir-rs = { path = "./fiskeridir-rs/", features = ["oasgen", "sqlx"] }

machine = { version = "0.19.0", registry = "orcalabs-orcastrator" }
orca-core = { version = "0.37.0", registry = "orcalabs-orcastrator" }

sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "chrono",
    "json",
    "uuid",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
serde_repr = "0.1"
serde_json = "1.0"
humantime-serde = "1.1"
reqwest = { version = "0.12.12", default-features = false }
stack-error = { version = "0.4.0", registry = "orcalabs-orcastrator" }
snafu = "0.8.5"
strum = { version = "0.27.1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
tokio = "1.43"
tokio-stream = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
async-trait = "0.1"
oasgen = { git = "https://github.com/markhilb/oasgen", branch = "all", features = [
    "chrono",
    "uuid",
] }
futures = "0.3"
futures-util = "0.3"
enum_index = "0.2"
enum_index_derive = "0.2"
uuid = { version = "1.12", features = ["serde"] }
wkt = { version = "0.14", features = ["serde"] }
geo = "0.30"
rand = "0.9"
num-traits = "0.2"
num-derive = "0.4"
csv = "1.3"
jurisdiction = "0.1"
http = "1.2"
geozero = { version = "0.14", features = ["with-postgis-sqlx"] }
geoutils = "0.5"
async-channel = "2.3.1"
itertools = "0.14.0"

# dev-dependencies
wiremock = "0.6"
tracing-subscriber = "0.3"
