[package]
name = "ais-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
postgres = { path = "../postgres" }

orca-core = { workspace = true, features = ["telemetry"] }
fiskeridir-rs = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = [
    "http2",
    "native-tls-alpn",
    "stream",
] }

tokio-util = { version = "0.7.12", features = ["codec", "compat"] }

[dev-dependencies]
orca-core = { workspace = true, features = ["dockertest"] }
dockertest = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "http2",
    "stream",
] }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true }
