[package]
name = "ais-data-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
orca-core = { version = "0.23.1", registry = "orcalabs-orcastrator", features = [
    "telemetry",
] }
postgres = { path = "../postgres" }
leviathan-postgres = { path = "../leviathan-postgres" }

chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
error-stack = "0.4.1"
config = "0.13.4"
serde = "1.0.195"
humantime-serde = "1.1.1"
tokio = { version = "1.35.1", features = ["macros"] }
indicatif = "0.17.7"

[workspace]
