[package]
name = "ais-data-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
postgres = { path = "../postgres" }

orca-core = { version = "0.31.0", registry = "orcalabs-orcastrator", features = [
    "telemetry",
] }
stack-error = { version = "0.3.0", registry = "orcalabs-orcastrator" }

snafu = "0.8.4"
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
config = "0.14.0"
serde = "1.0.195"
humantime-serde = "1.1.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
indicatif = "0.17.7"

[workspace]
