[package]
name = "database-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { path = "../postgres" }

orca-core = { workspace = true }
serde = { version = "1.0.209", features = ["derive"] }
config = "0.14.0"
tokio = { version = "1.39.3", features = ["macros"] }
