[package]
name = "database-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { path = "../postgres" }

orca-core = { workspace = true, features = ["telemetry"] }
serde = { workspace = true }
config = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
