[package]
name = "duckdb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }

fiskeridir-rs = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
orca-core = { workspace = true, features = ["telemetry"] }
num-traits = { workspace = true }
async-trait = { workspace = true }
humantime-serde = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = { workspace = true, features = ["net"] }
http = { workspace = true }

duckdb = { version = "=1.1", features = ["r2d2", "bundled"] }
libduckdb-sys = { version = "=1.1" }
r2d2 = { version = "0.8" }
tonic = { version = "0.12.3", features = ["gzip"] }
prost = "0.13"


[dev-dependencies]
postgres = { path = "../postgres" }

futures = { workspace = true }
orca-core = { workspace = true, features = ["test-helper"] }

[build-dependencies]
tonic-build = "0.12"
