[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
postgres = { path = "../postgres" }
scraper = { path = "../scraper" }
vessel-benchmark = { path = "../vessel-benchmark" }
meilisearch = { path = "../meilisearch" }

machine = { workspace = true }

orca-core = { workspace = true, features = ["telemetry"] }
fiskeridir-rs = { workspace = true }

derivative = "2.2.0"
config = { version = "0.14.0", features = ["yaml"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.39.3", features = ["tracing", "rt-multi-thread"] }
tracing = "0.1.40"
serde = { version = "1.0.209", features = ["derive"] }
async-trait = "0.1.81"
serde_json = "1"
error-stack = { workspace = true }
futures = "0.3.30"
itertools = "0.13.0"

strum = "0.26.3"
strum_macros = "0.26.4"

geoutils = "0.5.1"
num-traits = "0.2.19"
humantime = "2.1.0"
geo = "0.28.0"
rand = "0.8.5"
pyo3 = { version = "0.22.2", features = ["chrono", "auto-initialize"] }
once_cell = "1.19.0"
console-subscriber = "0.4.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
futures = "0.3.30"
dockertest = { workspace = true }
orca-core = { workspace = true, features = ["dockertest"] }
