[package]
name = "engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["kyogre-core/test", "postgres/test", "processors/test"]

[dependencies]
kyogre-core = { path = "../kyogre-core" }
postgres = { path = "../postgres" }
scraper = { path = "../scraper" }
trip-benchmark = { path = "../trip-benchmark" }
http-client = { path = "../http-client" }
processors = { path = "../processors" }

stack-error = { workspace = true }
snafu = { workspace = true }
machine = { workspace = true }
orca-core = { workspace = true, features = ["telemetry"] }
fiskeridir-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["tracing", "rt-multi-thread"] }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
geo = { workspace = true }
rand = { workspace = true }
pyo3 = { workspace = true }
num-traits = { workspace = true }
geoutils = { workspace = true }
async-channel = { workspace = true }
itertools = { workspace = true }

derivative = "2.2.0"
humantime = "2.1.0"

[dev-dependencies]
engine = { path = ".", features = ["test"] }
http-client = { path = "../http-client", default-features = false }
processors = { path = "../processors", features = ["test"] }

orca-core = { workspace = true, features = ["test-helper"] }
