[package]
name = "fiskeridir-rs"
version = "0.22.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
utoipa = ["dep:utoipa"]
sqlx = ["dep:sqlx"]

[dependencies]
stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
remain = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
jurisdiction = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
csv = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
utoipa = { workspace = true, optional = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "derive",
    "postgres",
], optional = true }
enum_index = { workspace = true }
enum_index_derive = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "stream", "json"] }

sha3 = "0.10.8"
zip = "2.2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["stream", "json"] }
wiremock = { workspace = true }

tempfile = "3.12.0"
