[package]
name = "fiskeridir-rs"
version = "0.22.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
utoipa = ["dep:utoipa"]
sqlx = ["dep:sqlx"]
test = []

[dependencies]
http-client = { path = "../http-client" }

stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
jurisdiction = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
csv = { workspace = true }
strum = { workspace = true }
utoipa = { workspace = true, optional = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "derive",
    "postgres",
], optional = true }
enum_index = { workspace = true }
enum_index_derive = { workspace = true }

ahash = "0.8.11"
zip = "2.2.1"

[dev-dependencies]
http-client = { path = "../http-client", default-features = false }

tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros"] }
wiremock = { workspace = true }

tempfile = "3.14.0"
