[package]
name = "haul-distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }

async-trait = "0.1.73"
tracing = "0.1.37"
chrono = { version = "0.4.26", features = ["serde"] }
error-stack = { workspace = true }
geo = "0.26.0"

[dev-dependencies]
postgres = { path = "../postgres" }
rand = "0.8.5"
dockertest = { version = "0.3.1", registry = "orcalabs-orcastrator" }
orca-core = { workspace = true, features = ["dockertest"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
fiskeridir-rs = { workspace = true }
tracing-subscriber = "0.3.17"
