[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["reqwest/rustls-tls"]

[dependencies]
snafu = { workspace = true }
stack-error = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "gzip",
    "stream",
] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
bytes = "1.9"
