[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
snafu = { workspace = true }
stack-error = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "native-tls",
    "http2",
    "json",
    "gzip",
    "stream",
] }
reqwest-middleware = { version = "0.5", features = ["query", "json"] }
reqwest-retry = "0.9"
reqwest-tracing = "0.6"
bytes = "1.9"
