[package]
name = "kyogre-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
utoipa = ["dep:utoipa"]
sqlx = ["dep:sqlx", "dep:geozero"]

[dependencies]
fiskeridir-rs = { workspace = true }
orca-core = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
serde_repr = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true, optional = true }
enum_index = { workspace = true }
enum_index_derive = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
wkt = { workspace = true }
geo = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
geozero = { workspace = true, optional = true }

oauth2 = "4.4.2"
flate2 = "1.0.34"
vpsearch = "2.0.1"
backon = "1.2.0"
