[package]
name = "kyogre-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
oasgen = ["dep:oasgen"]
sqlx = ["dep:sqlx", "dep:geozero"]
test = ["dep:rand"]

[dependencies]
fiskeridir-rs = { workspace = true }
orca-core = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
futures = { workspace = true }
enum_index = { workspace = true }
enum_index_derive = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
wkt = { workspace = true }
geo = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
async-channel = { workspace = true }

sqlx = { workspace = true, optional = true }
geozero = { workspace = true, optional = true }
oasgen = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

oauth2 = "5.0.0"
flate2 = "1.0.35"
vpsearch = "2.0.1"
backon = "1.3.0"
