[package]
name = "leviathan-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
orca-core = { registry = "orcalabs-orcastrator", version = "0.20.0", features = [
    "telemetry",
] }

sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "bigdecimal",
    "chrono",
    "offline",
] }
error-stack = { workspace = true }
bigdecimal = "0.3.0"
async-trait = "0.1.66"
chrono = { version = "0.4.24", features = ["serde"] }
