[package]
name = "leviathan-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
orca-core = { workspace = true, features = ["telemetry"] }

sqlx = { workspace = true }
error-stack = { workspace = true }
bigdecimal = "0.3.1"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
