[package]
name = "leviathan-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
orca-core = { version = "0.23.1", registry = "orcalabs-orcastrator", features = [
    "telemetry",
] }

sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "bigdecimal",
    "postgres",
    "chrono",
    "json",
    "uuid",
] }
error-stack = "0.4.1"
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
num-traits = "0.2.17"

[workspace]
