[package]
name = "meilisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }

error-stack = { workspace = true }
fiskeridir-rs = { workspace = true }

meilisearch-sdk = "0.24.3"
async-trait = "0.1.77"
tokio = "1.35.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
humantime-serde = "1.1.1"
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
futures = "0.3.30"
strum = "0.25.0"
strum_macros = "0.25.3"
