[package]
name = "meilisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
stack-error = { workspace = true }
snafu = { workspace = true }
fiskeridir-rs = { workspace = true }

meilisearch-sdk = "0.27.1"
async-trait = "0.1.81"
tokio = "1.39.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
humantime-serde = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
futures = "0.3.30"
strum = "0.26.3"
strum_macros = "0.26.4"
