[package]
name = "meilisearch"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }

stack-error = { workspace = true }
snafu = { workspace = true }
fiskeridir-rs = { workspace = true }
serde = { workspace = true }
humantime-serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }

meilisearch-sdk = "0.28.0"
