[package]
name = "ml-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca-core = { workspace = true }
tokio = "1.34.0"
kyogre-core = { path = "../kyogre-core" }
postgres = { path = "../postgres" }
engine = { path = "../engine" }
