[package]
name = "ml-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca-core = { version = "0.22.1", registry = "orcalabs-orcastrator" }
fiskeridir-rs = { path = "../fiskeridir-rs/", features = ["utoipa", "sqlx"] }
tokio = "1.34.0"
kyogre-core = { path = "../kyogre-core" }
postgres = { path = "../postgres" }
engine = { path = "../engine" }
clap = { version = "4.4", features = ["derive"] }
num-traits = "0.2.17"
strum = "0.25.0"
strum_macros = "0.25.3"

[workspace]
