[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core", features = ["sqlx"] }

orca-core = { workspace = true, features = ["telemetry"] }
fiskeridir-rs = { workspace = true }
jurisdiction = "0.1.1"
stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
geo = { workspace = true }
wkt = { workspace = true }
uuid = { workspace = true }
geozero = { workspace = true }

unnest_insert = { version = "0.9.0", registry = "orcalabs-orcastrator", features = [
    "derive",
] }


geo-types = "0.7.13"

[dev-dependencies]
dockertest = { workspace = true }
orca-core = { workspace = true, features = ["compositions"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
