[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["kyogre-core/test", "fiskeridir-rs/test"]

[dependencies]
kyogre-core = { path = "../kyogre-core", features = ["sqlx"] }

orca-core = { workspace = true, features = ["telemetry"] }
fiskeridir-rs = { workspace = true }
jurisdiction = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
geozero = { workspace = true }
async-channel = { workspace = true }

unnest_insert = { version = "0.11.0", registry = "orcalabs-orcastrator", features = [
    "derive",
] }


geo-types = "0.7.14"
